--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-color: #139de2;
 }
 form {
-    border: 1px solid #ccc;
+    border: 1px solid #a19f9f;
     padding: 20px;
     width: 400px;
     margin: 0 auto;
